--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tjflix-react-js",
   "version": "0.1.0",
-  "homepage": "https://tjp74.github.io/tjflix-app-react/",
+  "homepage": "https://tjp74.github.io/github.io-tjflix-app-react/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -18,8 +18,6 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
